--- a/src/components/talkofday/talkofday.css
+++ b/src/components/talkofday/talkofday.css
@@ -13,6 +13,7 @@ h2 {
     color: #fff;
     background-color: rgba(60, 60, 60, .3);
     border-radius: 10px;
+    margin-bottom: .3em;
 }
 
 .balloons {
