--- a/src/app.css
+++ b/src/app.css
@@ -1,16 +1,49 @@
+@import url(~ress/ress.css);
+
 body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: YuGothic,YuGothicM,"Hiragino Kaku Gothic ProN","Hiragino Kaku Gothic Pro",メイリオ,Meiryo,sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    max-width: 640px;
+    width: 100%;
+    min-width: 320px;
+    margin: 0 auto;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-* {
-    margin: 0;
-    padding: 0;
+a {
+    color: #000000;
+    text-decoration: none;
+}
+
+a:active,
+a:hover,
+a:visited,
+a:focus {
+    border-bottom: 0;
+}
+
+main {
+    padding: 5vh 0px;
+    background: linear-gradient(to bottom,#97ff97 0%,#00ec00 100%);
+    min-height: 100vh;
+}
+
+.app_title {
+    display: block;
+    width: 210px;
+    max-width: 80%;
+    margin: 0 auto 3em;
+}
+
+.app_trigger {
+    font-size: 1.2rem;
+    font-weight: 700;
+    display: block;
+    margin: 0 auto;
+    border: 0;
+    color: #fff;
 }
