--- a/src/components/talkofday/talkofday.css
+++ b/src/components/talkofday/talkofday.css
@@ -4,15 +4,15 @@
 
 h2 {
     display: block;
-    width: 100px;
+    width: 120px;
     margin: 0 auto;
-    padding: 3px 13px;
+    padding: .5em 0;
     font-size: 15px;
     font-weight: normal;
     text-align: center;
     color: #fff;
     background-color: rgba(60, 60, 60, .3);
-    border-radius: 10px;
+    border-radius: 15px;
     margin-bottom: .3em;
 }
 
