--- a/src/components/talkofday/talkofday.css
+++ b/src/components/talkofday/talkofday.css
@@ -4,16 +4,15 @@
 
 h2 {
     display: block;
+    padding: .5em 1em;
     width: 120px;
-    margin: 0 auto;
-    padding: .5em 0;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: normal;
     text-align: center;
     color: #fff;
     background-color: rgba(60, 60, 60, .3);
     border-radius: 15px;
-    margin-bottom: .3em;
+    margin: 0 auto .3em;
 }
 
 .balloons {
